@@ -9,11 +9,11 @@ import local.epul4a.fotosharing.service.UserService;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import static local.epul4a.fotosharing.enums.RoleType.ROLE_ADMIN;
+import static local.epul4a.fotosharing.enums.RoleType.ADMIN;
+import static local.epul4a.fotosharing.enums.RoleType.USER;
 
 @Service
 public class UserServiceImpl implements UserService {
@@ -35,11 +35,11 @@ public class UserServiceImpl implements UserService {
         //encrypt the password once we integrate spring security
         //user.setPassword(userDto.getPassword());
         user.setPassword(passwordEncoder.encode(userDto.getPassword()));
-        Role role = roleRepository.findByName(ROLE_ADMIN);
+        Role role = roleRepository.findByName(USER.name());
         if(role == null){
             role = checkRoleExist();
         }
-        user.setRoles(Arrays.asList(role));
+        user.setRoles(List.of(role));
         userRepository.save(user);
     }
     @Override
@@ -49,7 +49,7 @@ public class UserServiceImpl implements UserService {
     @Override
     public List<UserDto> findAllUsers() {
         List<User> users = userRepository.findAll();
-        return users.stream().map((user) -> convertEntityToDto(user))
+        return users.stream().map(this::convertEntityToDto)
                 .collect(Collectors.toList());
     }
     private UserDto convertEntityToDto(User user){
@@ -62,7 +62,7 @@ public class UserServiceImpl implements UserService {
     }
     private Role checkRoleExist() {
         Role role = new Role();
-        role.setName(ROLE_ADMIN);
+        role.setName(USER.name());
         return roleRepository.save(role);
     }
 }
